Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,22 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-de0e333ede46>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-de0e333ede46>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return {'avenue':seconcd_neighbor['avenue'], 'distance':distance(first_neighbor,second_neighbor, 'street':second_neihghbor['street'])}\u001b[0m\n\u001b[0m                                                                                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    return {'avenue':seconcd_neighbor['avenue'], 'distance':distance(first_neighbor,second_neighbor), 'street':second_neihghbor['street'])}\n",
+    "    return {'avenue':seconcd_neighbor['avenue'], 'distance':distance(first_neighbor,second_neighbor), 'street':second_neihghbor['street']}\n",
     "    pass"
    ]
   },
