--- a/index.ipynb
+++ b/index.ipynb
@@ -437,8 +437,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    return {'avenue':seconcd_neighbor['avenue'], 'distance':distance(first_neighbor,second_neighbor), 'street':second_neihghbor['street']}\n",
-    "    pass"
+    "    distance_wi"
    ]
   },
   {
