Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,7 +437,8 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_with_neighbor=first_neighbor.copy()"
+    "    distance_with_neighbor=first_neighbor.copy()\n",
+    "    "
    ]
   },
   {
