Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_with_neighbor=first_neighbor.copy()\n",
-    "    first_neighbor['distance']= "
+    "    distance_with_neighbor['distance']= "
    ]
   },
   {
