--- a/index.ipynb
+++ b/index.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_with_neighbor=first_neighbor.copy()\n",
     "    distance_with_neighbor['distance']= distance(first_neighbor, second_neighbor)\n",
-    "    return "
+    "    return distance_with_neighbor"
    ]
   },
   {
