--- a/index.ipynb
+++ b/index.ipynb
@@ -437,9 +437,9 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_with_neighbor=first_neighbor.copy()\n",
-    "    distance_with_neighbor['distance']= distance(first_neighbor, second_neighbor)\n",
-    "    return distance_with_neighbor"
+    "    distance_with_neighbo=first_neighbor.copy()\n",
+    "    distance_with_neighbo['distance']= distance(first_neighbor, second_neighbor)\n",
+    "    return distance_with_neighbo"
    ]
   },
   {
