--- a/index.ipynb
+++ b/index.ipynb
@@ -438,10 +438,12 @@
    "outputs": [],
    "source": [
     "import math\n",
+    "defimport math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_with_neighbo=first_neighbor.copy()\n",
-    "    distance_with_neighbo['distance']= distance(first_neighbor, second_neighbor)\n",
-    "    return distance_with_neighbo"
+    "    neighbor_with_distance = second_neighbor.copy()\n",
+    "    distance = math.sqrt(distance_between_neighbors_squared(first_neighbor, second_neighbor))\n",
+    "    neighbor_with_distance['distance'] = distance\n",
+    "    return neighbor_with_distance"
    ]
   },
   {
