--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "   for first_ne pass"
+    "   for first_neighbor in neighbors pass"
    ]
   },
   {
