Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,8 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for neighbor in neighbors \n",
+    "    for neighbor in neighbors:\n",
+    "        \n",
     "        \n",
     "       \n",
     "        pass"
