Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -476,11 +476,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-32-1e7042a9cfee>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-32-1e7042a9cfee>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
     "   def distance_all(first_neighbor, neighbors):\n",
@@ -489,7 +496,7 @@
     "        \n",
     "        \n",
     "       \n",
-    "        pass"
+    "    pass"
    ]
   },
   {
